--- a/FontEditor/MainWindow.xaml
+++ b/FontEditor/MainWindow.xaml
@@ -24,6 +24,9 @@
                 <MenuItem Header="Add Glyph" Click="AddGlyphMenuItemClick"/>
                 <MenuItem Header="Remove Glyph" Click="RemoveGlyphMenuItemClick"/>
             </MenuItem>
+            <MenuItem Header="Tools">
+                <MenuItem Header="Set Asset Directory..." Click="SetAssetDirectoryMenuItemClick"/>
+            </MenuItem>
         </Menu>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -40,6 +43,16 @@
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <ScrollViewer HorizontalScrollBarVisibility="Auto" Grid.Row="0">
+                    <local:GlyphEditor Font="{Binding CurrentFont}" Glyph="{Binding CurrentGlyph}" Scale="{Binding Scale}"/>
+                </ScrollViewer>
+                <Slider Minimum="1" Maximum="15" Value="{Binding Scale, Mode=TwoWay}" Grid.Row="1"/>
+            </Grid>
             <TabControl Grid.Column="2">
                 <TabItem Header="Glyph">
                     <Grid>
