--- a/WorldEditor/App.xaml
+++ b/WorldEditor/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WorldEditor"
-             StartupUri="MainWindow.xaml">
+             StartupUri="StartWindow.xaml"
+             ShutdownMode="OnLastWindowClose">
     <Application.Resources>
          
     </Application.Resources>
