--- a/WorldEditor/CreateWorldWindow.xaml
+++ b/WorldEditor/CreateWorldWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WorldEditor"
         mc:Ignorable="d"
-        Title="Create World" Height="450" Width="800">
+        Title="Create World" Height="450" Width="800" DataContext="{Binding RelativeSource={RelativeSource Self}}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -24,19 +24,29 @@
             </Grid.RowDefinitions>
 
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="3*" />
             </Grid.ColumnDefinitions>
 
-            <TextBlock Text="Tile Palette" />
-            <ComboBox Grid.Column="1" />
+            <TextBlock Text="Tile Palette" Margin="0 0 5 0" />
+            <Grid Grid.Column="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                
+                <ComboBox x:Name="PaletteComboBox" ItemsSource="{Binding PalettePaths}" SelectionChanged="ComboBox_SelectionChanged" />
+                <Button Grid.Column="1" Width="{Binding ActualHeight, RelativeSource={RelativeSource Self}}" Click="RefreshButton_Click" />
+            </Grid>
             <TextBlock Grid.Row="1" Text="Width" />
-            <TextBox Grid.Row="1" Grid.Column="1" />
+            <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding WorldWidth, Mode=TwoWay}" />
             <TextBlock Grid.Row="2" Text="Height" />
-            <TextBox Grid.Row="2" Grid.Column="1" />
+            <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding WorldHeight, Mode=TwoWay}" />
+
+            <Image Source="{Binding PalettePreviewPath}" Grid.Column="2" Grid.RowSpan="4" RenderOptions.BitmapScalingMode="NearestNeighbor" />
         </Grid>
 
-        <Button Grid.Row="3" Content="OK" HorizontalAlignment="Right" Margin="5" Padding="15 1" />
+        <Button Grid.Row="3" Content="OK" HorizontalAlignment="Right" Margin="5" Padding="15 1" Click="OKButton_Click" />
     </Grid>
 </Window>
