--- a/WorldEditor/MainWindow.xaml
+++ b/WorldEditor/MainWindow.xaml
@@ -5,9 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WorldEditor"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Polar Vortex World Editor" Height="450" Width="800" Style="{StaticResource ResourceKey={x:Type Window}}" DataContext="{Binding RelativeSource={RelativeSource Self}}">
     <Window.Resources>
-        
+        <Style x:Key="ToolButtonStyle" TargetType="{x:Type RadioButton}">
+            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type RadioButton}">
+                        <Border x:Name="Border" Width="44" Height="44" Background="{TemplateBinding Background}">
+                            <ContentControl Content="{TemplateBinding Content}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" />
+                        </Border>
+
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="Border" Property="Background" Value="{StaticResource ResourceKey=HoverBrush}" />
+                            </Trigger>
+                            <Trigger Property="IsChecked" Value="True">
+                                <Setter TargetName="Border" Property="Background" Value="{StaticResource ResourceKey=AccentBrush}" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -17,29 +37,86 @@
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="4px" />
             <ColumnDefinition Width="1*" />
-            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="4px" />
             <ColumnDefinition Width="250px" MinWidth="20px" />
         </Grid.ColumnDefinitions>
 
-        <Menu Grid.ColumnSpan="4">
+        <Menu Grid.ColumnSpan="5">
             <MenuItem Header="File" />
             <MenuItem Header="Edit" />
             <MenuItem Header="View" />
             <MenuItem Header="Help" />
         </Menu>
 
+        <Border Grid.Row="1" Background="{StaticResource BackgroundBrush}" />
+
         <StackPanel Grid.Row="1" Orientation="Vertical">
-            <RadioButton Content="Tile Paint" Style="{StaticResource ResourceKey={x:Type ToggleButton}}" />
-            <RadioButton Content="Collision Paint" Style="{StaticResource ResourceKey={x:Type ToggleButton}}" />
-            <RadioButton Content="Entities" Style="{StaticResource ResourceKey={x:Type ToggleButton}}" />
-            <RadioButton Content="Decor" Style="{StaticResource ResourceKey={x:Type ToggleButton}}" />
+            <RadioButton Content="{StaticResource ToolBrush32px}" IsChecked="True" Style="{StaticResource ResourceKey=ToolButtonStyle}" />
+            <RadioButton Content="{StaticResource ToolCollision32px}" Style="{StaticResource ResourceKey=ToolButtonStyle}" />
+            <RadioButton Content="{StaticResource ToolEntities32px}" Style="{StaticResource ResourceKey=ToolButtonStyle}" />
+            <RadioButton Content="{StaticResource ToolDecor32px}" Style="{StaticResource ResourceKey=ToolButtonStyle}" />
         </StackPanel>
 
-        <GridSplitter Grid.Row="1" Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="4" />
-
-        <Grid Grid.Row="1" Grid.Column="3">
+        <Grid Grid.Row="1" Grid.Column="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="20px" />
+            </Grid.RowDefinitions>
             
+            <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                <local:WorldElement x:Name="WorldElement" World="{Binding CurrentWorld}" BaseDirectory="{Binding BaseDirectory}" />
+            </ScrollViewer>
+
+            <Border Grid.Row="1" Background="{StaticResource BackgroundBrush}">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="1x" Padding="8 0" VerticalAlignment="Center" />
+                    <Button Content="{StaticResource Plus16px}" Width="20" />
+                    <Button Content="{StaticResource Minux16px}" Width="20" />
+                </StackPanel>
+            </Border>
+        </Grid>
+
+        <GridSplitter Grid.Row="1" Grid.Column="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="4" />
+
+        <Grid Grid.Row="1" Grid.Column="4">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="1*" />
+            </Grid.RowDefinitions>
+
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="20px" />
+                    <RowDefinition Height="18px" />
+                    <RowDefinition Height="1*" />
+                </Grid.RowDefinitions>
+
+                <Border Grid.RowSpan="2" Background="{StaticResource BackgroundBrush}" />
+                <Border Grid.Row="2" Background="{StaticResource BackgroundHeadingBrush}" />
+
+                <TextBlock Text="Palette" VerticalAlignment="Center" Margin="5 0" FontSize="14" />
+                <TextBlock Grid.Row="1" Text="{Binding CurrentWorld.PalettePath}" VerticalAlignment="Center" Margin="5 0" Foreground="{StaticResource ForegroundSecondaryBrushh}" />
+            </Grid>
+
+            <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" Height="4" />
+
+            <Grid Grid.Row="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="20px" />
+                    <RowDefinition Height="18px" />
+                    <RowDefinition Height="1*" />
+                </Grid.RowDefinitions>
+
+                <Border Grid.RowSpan="2" Background="{StaticResource BackgroundBrush}" />
+                <Border Grid.Row="2" Background="{StaticResource BackgroundHeadingBrush}" />
+
+                <TextBlock Text="Properties" VerticalAlignment="Center" Margin="5 0" FontSize="14" />
+                <TextBlock Grid.Row="1" Text="No selection" VerticalAlignment="Center" Margin="5 0" Foreground="{StaticResource ForegroundSecondaryBrushh}" />
+
+            </Grid>
         </Grid>
     </Grid>
 </Window>
