--- a/WorldEditor/App.xaml
+++ b/WorldEditor/App.xaml
@@ -11,7 +11,7 @@
         <Color x:Key="BackgroundHeading">#404040</Color>
         <Color x:Key="BackgroundWell">#282828</Color>
         <Color x:Key="Accent">#DD22AA</Color>
-        <Color x:Key="Collision">#CC3322</Color>
+        <Color x:Key="Collision">#B0CC3322</Color>
         <Color x:Key="ForegroundPrimary">#F1F1F1</Color>
         <Color x:Key="ForegroundSecondary">#C8C8C8</Color>
 
