--- a/WorldEditor/MainWindow.xaml
+++ b/WorldEditor/MainWindow.xaml
@@ -64,10 +64,12 @@
                 <RowDefinition Height="1*" />
                 <RowDefinition Height="20px" />
             </Grid.RowDefinitions>
-            
-            <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                <local:WorldElement x:Name="WorldElement" World="{Binding CurrentWorld}" BaseDirectory="{Binding BaseDirectory}" />
-            </ScrollViewer>
+
+            <Border Background="{StaticResource BackgroundHeadingBrush}">
+                <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                    <local:WorldElement x:Name="WorldElement" World="{Binding CurrentWorld}" BaseDirectory="{Binding BaseDirectory}" />
+                </ScrollViewer>
+            </Border>
 
             <Border Grid.Row="1" Background="{StaticResource BackgroundBrush}">
                 <StackPanel Orientation="Horizontal">
