--- a/WorldEditor/MainWindow.xaml
+++ b/WorldEditor/MainWindow.xaml
@@ -67,7 +67,14 @@
 
             <Border Background="{StaticResource BackgroundHeadingBrush}">
                 <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                    <local:WorldElement x:Name="WorldElement" World="{Binding CurrentWorld}" BaseDirectory="{Binding BaseDirectory}" />
+                    <Border x:Name="WorldView" Background="{StaticResource BackgroundBrush}" HorizontalAlignment="Left" VerticalAlignment="Top" MouseEnter="WorldElement_MouseEnter" MouseLeave="WorldElement_MouseLeave" MouseMove="WorldElement_MouseMove">
+                        <Grid>
+                            <local:WorldElement x:Name="WorldElement" World="{Binding CurrentWorld}" BaseDirectory="{Binding BaseDirectory}" HorizontalAlignment="Left" VerticalAlignment="Top" />
+                            <Canvas x:Name="WorldCanvas">
+                                <Rectangle x:Name="TileHoverRectangle" Visibility="Hidden" Fill="{StaticResource HoverBrush}" IsHitTestVisible="False" />
+                            </Canvas>
+                        </Grid>
+                    </Border>
                 </ScrollViewer>
             </Border>
 
