--- a/WorldEditor/MainWindow.xaml
+++ b/WorldEditor/MainWindow.xaml
@@ -44,7 +44,11 @@
         </Grid.ColumnDefinitions>
 
         <Menu Grid.ColumnSpan="5">
-            <MenuItem Header="File" />
+            <MenuItem Header="File">
+                <MenuItem Header="New..." InputGestureText="Ctrl+N" />
+                <MenuItem Header="Save" InputGestureText="Ctrl+S" Click="SaveMenuItem_Click" />
+                <MenuItem Header="Save As..." InputGestureText="Ctrl+Shift+S" Click="SaveAsMenuItem_Click" />
+            </MenuItem>
             <MenuItem Header="Edit" />
             <MenuItem Header="View" />
             <MenuItem Header="Help" />
