--- a/WorldEditor/MainWindow.xaml
+++ b/WorldEditor/MainWindow.xaml
@@ -62,35 +62,65 @@
             <ColumnDefinition Width="250px" MinWidth="20px" />
         </Grid.ColumnDefinitions>
 
-        <Menu Grid.ColumnSpan="5">
+        <Menu Grid.ColumnSpan="5" Background="{StaticResource BackgroundBrush}">
             <MenuItem Header="File">
                 <MenuItem Header="New..." InputGestureText="Ctrl+N" Command="ApplicationCommands.New" />
-                <MenuItem Header="Save" InputGestureText="Ctrl+S" Command="ApplicationCommands.Save" />
+                <MenuItem Header="Save" InputGestureText="Ctrl+S" Command="ApplicationCommands.Save">
+                    <MenuItem.Icon>
+                        <Image Source="{StaticResource Save16px}" />
+                    </MenuItem.Icon>
+                </MenuItem>
                 <MenuItem Header="Save As..." InputGestureText="Ctrl+Shift+S" Command="ApplicationCommands.SaveAs" />
             </MenuItem>
             <MenuItem Header="Edit">
-                <MenuItem Header="Undo" InputGestureText="Ctrl+Z" Command="ApplicationCommands.Undo" />
-                <MenuItem Header="Redo" InputGestureText="Ctrl+Shift+Z" Command="ApplicationCommands.Redo" />
+                <MenuItem Header="Undo" InputGestureText="Ctrl+Z" Command="ApplicationCommands.Undo">
+                    <MenuItem.Icon>
+                        <Image Source="{StaticResource Undo16px}" />
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Header="Redo" InputGestureText="Ctrl+Shift+Z" Command="ApplicationCommands.Redo">
+                    <MenuItem.Icon>
+                        <Image Source="{StaticResource Redo16px}" />
+                    </MenuItem.Icon>
+                </MenuItem>
             </MenuItem>
             <MenuItem Header="View" />
             <MenuItem Header="Help" />
         </Menu>
 
-        <ToolBar Grid.Row="1" Grid.ColumnSpan="5" Background="{StaticResource BackgroundBrush}">
-            <Button Content="{StaticResource Save16px}" Command="ApplicationCommands.Save" />
-            <Button Content="{StaticResource Undo16px}" Command="ApplicationCommands.Undo" />
-            <Button Content="{StaticResource Redo16px}" Command="ApplicationCommands.Redo" />
+        <ToolBar Grid.Row="1" Grid.ColumnSpan="5" Background="{StaticResource BackgroundBrush}" Padding="2 0">
+            <Button Command="ApplicationCommands.Save" ToolTip="Save (Ctrl+S)">
+                <Image Source="{StaticResource Save16px}" Width="16" Height="16" />
+            </Button>
+            <Button Command="ApplicationCommands.Undo" ToolTip="Undo (Ctrl+Z)">
+                <Image Source="{StaticResource Undo16px}" Width="16" Height="16" />
+            </Button>
+            <Button Command="ApplicationCommands.Redo" ToolTip="Redo (Ctrl+Shift+Z)">
+                <Image Source="{StaticResource Redo16px}" Width="16" Height="16" />
+            </Button>
         </ToolBar>
 
         <Border Grid.Row="3" Background="{StaticResource BackgroundBrush}" />
 
         <StackPanel Grid.Row="3" Orientation="Vertical">
-            <RadioButton x:Name="TileToolButton" Content="{StaticResource ToolBrush32px}" ToolTip="Tile Paint Tool" IsChecked="True" Style="{StaticResource ResourceKey=ToolButtonStyle}" />
-            <RadioButton x:Name="CollisionToolButton" Content="{StaticResource ToolCollision32px}" ToolTip="Tile Collision Tool" Style="{StaticResource ResourceKey=ToolButtonStyle}" Checked="CollisionTool_Checked" Unchecked="CollisionTool_Unchecked" />
-            <RadioButton x:Name="EntityToolButton" Content="{StaticResource ToolEntities32px}" ToolTip="Entities" Style="{StaticResource ResourceKey=ToolButtonStyle}" />
-            <RadioButton x:Name="DecorToolButton" Content="{StaticResource ToolDecor32px}" ToolTip="Decor Tool" Style="{StaticResource ResourceKey=ToolButtonStyle}" />
-            <RadioButton x:Name="GridsToolButton" Content="{StaticResource ToolGrids32px}" ToolTip="Grids Tool" Style="{StaticResource ResourceKey=ToolButtonStyle}" />
-            <RadioButton x:Name="BackgroundToolButton" Content="{StaticResource ToolBackground32px}" ToolTip="Background Tool" Style="{StaticResource ResourceKey=ToolButtonStyle}" />
+            <RadioButton x:Name="TileToolButton" ToolTip="Tile Paint Tool" IsChecked="True" Style="{StaticResource ResourceKey=ToolButtonStyle}">
+                <Image Source="{StaticResource ToolBrush32px}" />
+            </RadioButton>
+            <RadioButton x:Name="CollisionToolButton" ToolTip="Tile Collision Tool" Style="{StaticResource ResourceKey=ToolButtonStyle}" Checked="CollisionTool_Checked" Unchecked="CollisionTool_Unchecked">
+                <Image Source="{StaticResource ToolCollision32px}" />
+            </RadioButton>
+            <RadioButton x:Name="EntityToolButton" ToolTip="Entities" Style="{StaticResource ResourceKey=ToolButtonStyle}">
+                <Image Source="{StaticResource ToolEntities32px}" />
+            </RadioButton>
+            <RadioButton x:Name="DecorToolButton" ToolTip="Decor Tool" Style="{StaticResource ResourceKey=ToolButtonStyle}">
+                <Image Source="{StaticResource ToolDecor32px}" />
+            </RadioButton>
+            <RadioButton x:Name="GridsToolButton" ToolTip="Grids Tool" Style="{StaticResource ResourceKey=ToolButtonStyle}">
+                <Image Source="{StaticResource ToolGrids32px}" />
+            </RadioButton>
+            <RadioButton x:Name="BackgroundToolButton" ToolTip="Background Tool" Style="{StaticResource ResourceKey=ToolButtonStyle}">
+                <Image Source="{StaticResource ToolBackground32px}" />
+            </RadioButton>
         </StackPanel>
 
         <Grid Grid.Row="3" Grid.Column="2">
@@ -115,8 +145,12 @@
             <Border Grid.Row="1" Background="{StaticResource BackgroundBrush}">
                 <StackPanel Orientation="Horizontal">
                     <TextBlock x:Name="ZoomLabel" Text="1x" Padding="4 0" VerticalAlignment="Center" MinWidth="40" TextAlignment="Right" />
-                    <Button Content="{StaticResource Plus16px}" Width="20" Click="ZoomInButton_Click" />
-                    <Button Content="{StaticResource Minux16px}" Width="20" Click="ZoomOutButton_Click" />
+                    <Button Width="20" Click="ZoomInButton_Click">
+                        <Image Source="{StaticResource Plus16px}" />
+                    </Button>
+                    <Button Width="20" Click="ZoomOutButton_Click">
+                        <Image Source="{StaticResource Minux16px}" />
+                    </Button>
                 </StackPanel>
             </Border>
         </Grid>
