--- a/WorldEditor/MainWindow.xaml
+++ b/WorldEditor/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WorldEditor"
+        xmlns:models="clr-namespace:WorldEditor.Models"
         mc:Ignorable="d"
         Title="Polar Vortex World Editor" Height="450" Width="800" Style="{StaticResource ResourceKey={x:Type Window}}" DataContext="{Binding RelativeSource={RelativeSource Self}}">
     <Window.Resources>
@@ -131,13 +132,33 @@
 
             <Border Background="{StaticResource BackgroundHeadingBrush}">
                 <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                    <Border x:Name="WorldView" Background="{StaticResource BackgroundBrush}" HorizontalAlignment="Left" VerticalAlignment="Top" MouseEnter="WorldView_MouseEnter" MouseLeave="WorldView_MouseLeave" MouseMove="WorldView_MouseMove" MouseDown="WorldView_MouseDown" MouseUp="WorldView_MouseUp">
+                    <Border x:Name="WorldView" HorizontalAlignment="Left" VerticalAlignment="Top">
                         <Grid>
-                            <local:WorldElement x:Name="WorldElement" World="{Binding CurrentWorld}" BaseDirectory="{Binding BaseDirectory}" HorizontalAlignment="Left" VerticalAlignment="Top" />
+
+                            <ItemsControl ItemsSource="{Binding CurrentWorld.Grids}">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <Canvas />
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate DataType="{x:Type models:Grid}">
+                                        <Canvas>
+                                            <Border Canvas.Left="{Binding X}" Canvas.Top="{Binding Y}" Background="{StaticResource BackgroundBrush}" Width="{Binding Width}" Height="{Binding Height}">
+                                                <local:GridElement Grid="{Binding}" ShowCollision="{Binding ShowCollision, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" BaseDirectory="{Binding BaseDirectory, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" HorizontalAlignment="Left" VerticalAlignment="Top" MouseEnter="GridElement_MouseEnter" MouseLeave="GridElement_MouseLeave" MouseMove="GridElement_MouseMove" MouseDown="GridElement_MouseDown" MouseUp="GridElement_MouseUp" />
+                                            </Border>
+                                        </Canvas>
+              
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
                             <Canvas x:Name="WorldCanvas">
-                                <Rectangle x:Name="TileHoverRectangle" Visibility="Hidden" Fill="{StaticResource HoverBrush}" IsHitTestVisible="False" />
+                                <Rectangle x:Name="TileHoverRectangle" Visibility="Hidden" Width="1" Height="1" Fill="{StaticResource HoverBrush}" IsHitTestVisible="False" />
                             </Canvas>
                         </Grid>
+                        
+                        
                     </Border>
                 </ScrollViewer>
             </Border>
@@ -173,11 +194,11 @@
 
                 <Border Grid.RowSpan="2" Background="{StaticResource BackgroundBrush}" />
                 <Border Grid.Row="2" Background="{StaticResource BackgroundHeadingBrush}">
-                    <local:TilePicker PalettePath="{Binding CurrentWorld.PalettePath}" BaseDirectory="{Binding BaseDirectory}" SelectedIndex="{Binding SelectedTileIndex, Mode=TwoWay}" />
+                    <local:TilePicker PalettePath="{Binding SelectedGrid.PalettePath}" BaseDirectory="{Binding BaseDirectory}" SelectedIndex="{Binding SelectedTileIndex, Mode=TwoWay}" />
                 </Border>
 
                 <TextBlock Text="Palette" VerticalAlignment="Center" Margin="5 0" FontSize="14" />
-                <TextBlock Grid.Row="1" Text="{Binding CurrentWorld.PalettePath}" VerticalAlignment="Center" Margin="5 0" Foreground="{StaticResource ForegroundSecondaryBrushh}" />
+                <TextBlock Grid.Row="1" Text="{Binding SelectedGrid.PalettePath}" VerticalAlignment="Center" Margin="5 0" Foreground="{StaticResource ForegroundSecondaryBrushh}" />
             </Grid>
 
             <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" Height="4" />
